# PPAL_MMYOLO

./: README.md  pyproject.toml
al_configs/coco/: ppal_yolov7_tiny.py
configs/coco_active_learning/al_inference/: yolov7_diversity.py  yolov7_uncertainty.py
configs/coco_active_learning/al_train/: yolov7.py
configs/coco_active_learning/bases/: al_yolov7_base.py  al_yolov7_inference_base.py
mmdet/: __init__.py
mmdet/ppal/: builder.py
mmdet/ppal/datasets/: al_coco.py  al_voc.py
mmdet/ppal/models/: __init__.py  utils.py
mmdet/ppal/models/retinanet_al/: al_retinanet.py  al_retinanet_feat_head.py  retinanet_quality_head.py  retinanet_uncertainty_head.py
mmdet/ppal/models/yolov7_al/: __init__.py  al_yolov7.py  yolov7_feat_head.py  yolov7_quality_ema_head.py
mmdet/ppal/sampler/: al_sampler_base.py  difficulty_calibrated_uncertainty_sampler.py  diversity_sampler.py
ppal_ext/: __init__.py  yolo_pr_metric.py
tools/: run_al_coco.py  test.py  train.py
tools/al_data/: create_al_dataset.py
yolo_custom_hooks/: yolo_style_metrics_hook.py
